# django-project-structure

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/core/: models.py
apps/payments/: constants.py  services.py
apps/payments/api/v1/: urls.py
apps/users/: admin.py  managers.py  models.py  services.py
apps/users/api/v1/: views.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
